--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fresh food</title>
+    <title>Food Network</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Uchen&display=swap" rel="stylesheet">
@@ -13,41 +13,108 @@
 </head>
 
 <body>
+
     <section class="sec1 flexible">
-        <div class="common">
-            <h1>Do <span class="span1">Exercise</span> to keep fit</h1>
-            <p>Food is important part of our life.Without food we can't live.But good food is important for nutrition.We
-                need to take proper food and must exercise everyday at least 30 minutes.
-            </p>
-            <a class="button" target="blank" href="https://fast.com/">Sign up</a>
+
+        <div class="half-width">
+            <h1> Do</h1>
+
+            <h1> <span class="color">Exercise</span>to keep fit </h1>
+            <p>ood is important part of our life.Without food we can't live.But good food is important for nutrition.We
+                need to take proper food and must exercise everyday at least 30 minutes. </p>
+
+            <a target="blank" class="href" href="https://www.youtube.com">Hire me</a>
+
         </div>
-        <div class="common">
+
+
+        <div class="half-width">
             <img src="cr7.jpg" alt="">
+
         </div>
-
-        <section class="sec2 flexible">
-
-            <div class="common">
-                <h1>Ragular exercise</h1>
-                <p>Regular exercise is must.Because regular exercise keeps our mind fresh.We can do our work attentively
-                    .It gives us more eenergy by making feet.Waling ,playing ,running,swiming are different type of
-                    erercise.I prefer football for the young people.It's my favourite sport.There will be high voltage
-                    matches today.The games are between Italy vs Spain and Arg vs Colombia.As a brazil fan i wish
-                    colombia will win the match .Haha.By the way we should exercise regularly</p>
-
-                <a class="button" target="blank" href="https://fast.com/">Sign up</a>
-            </div>
-
-            <div class="common">
-                <img src="bicycle.jpg" alt="">
-            </div>
-
-        </section>
-
-
-
 
     </section>
+
+    <section class="sec2 flexible">
+        <div class="half-width">
+            <img src="bicycle.jpg" alt="">
+        </div>
+
+
+        <div class="half-width">
+            <h1>About exercise</h1>
+
+            <p> Regular exercise is must.Because regular exercise keeps our mind fresh.We can do our work attentively
+                .It gives us more eenergy by making feet.Waling ,playing ,running,swiming are different type of
+                erercise.I prefer football for the young people.It's my favourite sport.There will be high voltage
+                matches today.The games are between Italy vs Spain and Arg vs Colombia.As a brazil fan i wish colombia
+                will win the match .Haha.By the way we should exercise regularly
+
+            </p>
+
+            <a target="_blank" class="color" href="https://fast.com/">Download Now</a>
+        </div>
+
+    </section>
+
+    <section class="sec3">
+        <h1 class="text">Rules and regulations</h1>
+        <div class="flexible">
+
+
+            <div class="common">
+                <img class="resize" src="Project Cover.jpg" alt="">
+                <h1>Eat fresh vegetable and meat</h1>
+
+
+                <p>Vegetables are important for human health because of their vitamins, minerals, phytochemical
+                    compounds, and dietary fiber content. Especially antioxidant vitamins (vitamin A, vitamin C, and
+                    vitamin E) and dietary fiber content have important roles in human health.
+                </p>
+            </div>
+
+            <div class="common">
+                <img class="resize" src="Project Cover6.png" alt="">
+                <h1>Eat green and fresh fruit</h1>
+
+                <p>
+                    Fruits are an excellent source of essential vitamins and minerals, and they are high in fiber.
+                    Fruits also provide a wide range of health-boosting antioxidants, including flavonoids. Eating a
+                    diet high in fruits and vegetables can reduce a person's risk of developing heart disease, cancer,
+                    inflammation, and diabetes.
+                </p>
+            </div>
+
+            <div class="common">
+                <img class="resize" src="Project Cover8.png" alt="">
+                <h1>Avoid Oily food</h1>
+
+                <p>Greasy foods like fries, chips, pizza, and doughnuts are high in calories and unhealthy fats. A high
+                    intake of these foods can lead to weight gain, obesity, heart disease, diabetes, bloating, diarrhea,
+                    acne, and impaired brain function
+                </p>
+            </div>
+
+
+        </div>
+    </section>
+
+    <footer class="flexible">
+        <div class="foot">
+            <h2>1M </h2>
+            <p>Youtube subcribers</p>
+        </div>
+
+        <div class="foot">
+            <h2>1.5M</h2>
+            <p>Facebook followers</p>
+        </div>
+
+        <div class="foot">
+            <h2>650k</h2>
+            <p>Instagram followers</p>
+        </div>
+    </footer>
 </body>
 
 </html>
